make new main.tex and separate original for reference

--- a/template_example.tex
+++ b/template_example.tex
@@ -1,14 +1,14 @@
 \documentclass[fleqn,10pt]{olplainarticle}
 % Use option lineno for line numbers 
 
-\title{Docker in Software Architecture}
+\title{Example Article Title}
 
-\author[1]{Daniel Koch}
-\author[2]{Sebastian Sergelius}
+\author[1]{First Author}
+\author[2]{Second Author}
 \affil[1]{Address of first author}
 \affil[2]{Address of second author}
 
-\keywords{docker, software architecture, containers}
+\keywords{Keyword1, Keyword2, Keyword3}
 
 \begin{abstract}
 Please provide an abstract of no more than 300 words. Your abstract should explain the main contributions of your article, and should not contain any material that is not included in the main text. 
