--- a/main.tex
+++ b/main.tex
@@ -22,68 +22,32 @@ Please provide an abstract of no more than 300 words. Your abstract should expla
 
 \section*{Introduction}
 
-Thanks for using Overleaf to write your article. Your introduction goes here! Some examples of commonly used commands and features are listed below, to help you get started.
+What is docker? What is it used for? What are containers and why use them? Maybe something about how popular docker has become. Does docker affect architecture?
+The purpose and the domain (what to use it for?);
 
 \section*{Methods and Materials}
 
 Guidelines can be included for standard research article sections, such as this one.
 
-\section*{Some \LaTeX{} Examples}
+\section*{ overview of the main functional features (what does it do for you?) if applicable}
 \label{sec:examples}
+ overview of the main functional features (what does it do for you?) if applicable
 
-Use section and subsection commands to organize your document. \LaTeX{} handles all the formatting and numbering automatically. Use ref and label commands for cross-references.
+\subsection*{A technical overview (what is it?) }
 
-\subsection*{Figures and Tables}
+Techical overview
 
-Use the table and tabular commands for basic tables --- see Table~\ref{tab:widgets}, for example. You can upload a figure (JPEG, PNG or PDF) using the project menu. To include it in your document, use the includegraphics command as in the code for Figure~\ref{fig:view} below.
+\section*{The qualities (-ilities) that the TUS claims to support (what?) and justifications for the claims (how?)}
 
-\begin{figure}[ht]
-\centering
-\includegraphics[width=0.7\linewidth]{frog}
-\caption{An example image of a frog.}
-\label{fig:view}
-\end{figure}
+Explain something
 
-\begin{table}[ht]
-\centering
-\begin{tabular}{l|r}
-Item & Quantity \\\hline
-Candles & 4 \\
-Fork handles & ?  
-\end{tabular}
-\caption{\label{tab:widgets}An example table.}
-\end{table}
+\section*{What is it not suited for (any inherent limitations or reported issues) - may be challenging to research}
 
-\subsection*{Citations}
+Perhaps
 
-LaTeX formats citations and references automatically using the bibliography records in your .bib file, which you can edit via the project menu. Use the cite command for an inline citation, like \cite{lees2010theoretical}, and the citep command for a citation in parentheses \citep{lees2010theoretical}.
-
-\subsection*{Mathematics}
-
-\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-$$S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i$$
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
-
-\subsection*{Lists}
-
-You can make lists with automatic numbering \dots
-
-\begin{enumerate}[noitemsep] 
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
-\begin{itemize}[noitemsep] 
-\item Like this,
-\item and like this.
-\end{itemize}
-\dots or with words and descriptions \dots
-\begin{description}
-\item[Word] Definition
-\item[Concept] Explanation
-\item[Idea] Text
-\end{description}
+\section*{Architectural impact - what aspect of application/system architecture is affected by using it and how?}
+yes
+\section*{Tool support / automation provided (can be also from 3rd parties) to help application developers be more productive}
 
 \section*{Acknowledgments}
 
