--- a/sample.bib
+++ b/sample.bib
@@ -13,3 +13,11 @@
     url={https://docs.docker.com/get-started/overview/},
     urldate={2022-01-23}
 }
+@book{poulton2020docker,
+  title={Docker Deep Dive: Harness the full potential of your applications with Docker},
+  author={Poulton, N.},
+  isbn={9781800569119},
+  url={https://books.google.fi/books?id=DicGEAAAQBAJ},
+  year={2020},
+  publisher={Packt Publishing}
+}
