--- a/sample.bib
+++ b/sample.bib
@@ -1,18 +1,3 @@
-@article{lees2010theoretical,
-  title={Theoretical maximum capacity as benchmark for empty vehicle redistribution in personal rapid transit},
-  author={Lees-Miller, John and Hammersley, John and Wilson, R},
-  journal={Transportation Research Record: Journal of the Transportation Research Board},
-  number={2146},
-  pages={76--83},
-  year={2010},
-  publisher={Transportation Research Board of the National Academies}
-}
-@online{dockeroverview, 
-    author={Docker, Inc.},
-    title={Docker overview},
-    url={https://docs.docker.com/get-started/overview/},
-    urldate={2022-01-23}
-}
 @book{poulton2020docker,
   title={Docker Deep Dive: Harness the full potential of your applications with Docker},
   author={Poulton, N.},
@@ -21,3 +6,17 @@
   year={2020},
   publisher={Packt Publishing}
 }
+@misc{wiki:Software_portability,
+   author = "Wikipedia",
+   title = "{Software portability} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2022",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Software\%20portability&oldid=1062447939}},
+   note = "[Online; accessed 27-January-2022]"
+ }
+@misc{hy:DevOps_with_Docker,
+   author = {Kousa, J.},
+   title = "{DevOps with Docker}",
+   year = "2022",
+   howpublished = {\url{https://devopswithdocker.com/}},
+   note = "[Online; accessed 27-January-2022]"
+ } 
