--- a/main.tex
+++ b/main.tex
@@ -26,16 +26,24 @@ What is docker? What is it used for? What are containers and why use them? Maybe
 The purpose and the domain (what to use it for?);
 
 \section*{overview of the main functional features (what does it do for you?) if applicable}
-\label{sec:examples}
- overview of the main functional features (what does it do for you?) if applicable
 
-\subsection*{A technical overview (what is it?)}
+\subsection*{Docker Daemon}
 
+\subsection*{Docker Client}
+
+\subsection*{Docker Images}
+
+\subsection*{Docker Containers}
+
+
+\section*{A technical overview (what is it?)}
+
+\subsection*{Docker Architecture}
 Techical overview
 
 Kelasin, että kirjoitetaan tänne vähän tosta mitä se vaatii namespacea cgrouppia jne ja sit vois niiden perusteella analysoida noita quality attributeja? En tiedä. Mitä mieltä olet? On jotenkin vaikea kirjoittaa -ilities, ilman että käy läpi tuon techin, enkä kyllä löydä hyviä lähteitäkään. 
 
-\section*{Docker Quality Attributes}
+\section*{ Quality Attributes}
 
 The qualities (-ilities) that the TUS claims to support (what?) and justifications for the claims (how?)
 Based on how Docker is built, the system has some qualities hoisted in it. In this section we will 
