--- a/sample.bib
+++ b/sample.bib
@@ -19,4 +19,13 @@
    year = "2022",
    howpublished = {\url{https://devopswithdocker.com/}},
    note = "[Online; accessed 27-January-2022]"
+ }
+ @misc{docker:overview,
+   author = "Docker Inc.",
+   title = "{Docker overview}",
+   year = "2022",
+   howpublished = {\url{https://docs.docker.com/get-started/overview/}},
+   note = "[Online; accessed 28-January-2022]"
  } 
+
+ 
