something to intro

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \author[1]{Daniel Koch}
 \author[2]{Sebastian Sergelius}
-\affil[1]{Address of first author}
+\affil[1]{daniel.koch@helsinki.fi}
 \affil[2]{github.com/sebazai}
 
 \keywords{docker, software architecture, containers}
@@ -22,8 +22,16 @@ Please provide an abstract of no more than 300 words. Your abstract should expla
 
 \section*{Introduction}
 
-What is docker? What is it used for? What are containers and why use them? Maybe something about how popular docker has become. Does docker affect architecture?
-The purpose and the domain (what to use it for?);
+With the rise of DevOps and the use of Docker, containerization has become more and more relevant to think about even
+in software architecture. DevOps does not have any official definition.
+One formal definition is given by \cite{Jabbari_devops}: 
+\begin{displayquote}
+"DevOps is a development methodology aimed at bridging the gap between Development and Operations, emphasizing communication and collaboration, continuous integration, quality assurance and delivery with automated deployment utilizing a set of development practices".
+\end{displayquote}
+Another way to put DevOps is that it consists of the development of software and operations and that DevOps means that development, release, configuration, and monitoring are all done by the same people, rather than having separate teams for every part \citep{hy:DevOps_with_Docker}.
+
+Containerization is commonly
+
 
 \section*{overview of the main functional features (what does it do for you?) if applicable}
 
