--- a/sample.bib
+++ b/sample.bib
@@ -26,6 +26,24 @@
    year = "2022",
    howpublished = {\url{https://docs.docker.com/get-started/overview/}},
    note = "[Online; accessed 28-January-2022]"
- } 
+ }
+@inproceedings{Jabbari_devops,
+author = {Jabbari, Ramtin and bin Ali, Nauman and Petersen, Kai and Tanveer, Binish},
+title = {What is DevOps? A Systematic Mapping Study on Definitions and Practices},
+year = {2016},
+isbn = {9781450341349},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2962695.2962707},
+doi = {10.1145/2962695.2962707},
+abstract = {Context: DevOps, the combination of Development and Operations, is a new way of thinking in the software engineering domain that recently received much attention. Given that DevOps is a new term and novel concept recently introduced, no common understanding of what it entails has been achieved yet. Consequently, definitions of DevOps often only represent a part that is relevant to the concept.Objective:This study aims to characterize DevOps by exploring central components of DevOps definitions reported in the literature, specifying practices explicitly proposed for DevOps and investigating the similarities and differences between DevOps and other existing methods in software engineering.Method: A systematic mapping study was conducted that used six electronic databases: IEEE, ACM, Inspec, Scopus, Wiley Online Library and Web of Science.Result: 44 studies have been selected that report a definition of DevOps, 15 studies explicitly stating DevOps practices, and 15 studies stating how DevOps is related to other existing methods. Papers in some cases stated a combination of a definition, practices, and relations to other methods, the total number of primary studies was 49.Conclusion: We proposed a definition for DevOps which may overcome inconsistencies over the various existing definitions of individual research studies. In addition, the practices explicitly proposed for DevOps have been presented as well as the relation to other software development methods.},
+booktitle = {Proceedings of the Scientific Workshop Proceedings of XP2016},
+articleno = {12},
+numpages = {11},
+keywords = {Software development method, DevOps practice, DevOps definition},
+location = {Edinburgh, Scotland, UK},
+series = {XP '16 Workshops}
+}
+@ARTICLE{docker_security,  author={Combe, Theo and Martin, Antony and Di Pietro, Roberto},  journal={IEEE Cloud Computing},   title={To Docker or Not to Docker: A Security Perspective},   year={2016},  volume={3},  number={5},  pages={54-62},  doi={10.1109/MCC.2016.100}}
 
  
