--- a/sample.bib
+++ b/sample.bib
@@ -45,5 +45,13 @@ location = {Edinburgh, Scotland, UK},
 series = {XP '16 Workshops}
 }
 @ARTICLE{docker_security,  author={Combe, Theo and Martin, Antony and Di Pietro, Roberto},  journal={IEEE Cloud Computing},   title={To Docker or Not to Docker: A Security Perspective},   year={2016},  volume={3},  number={5},  pages={54-62},  doi={10.1109/MCC.2016.100}}
+ } 
+ @misc{docker:dockerd,
+  author = "Docker Inc.",
+  title = "{Daemon CLI (dockerd)}",
+  year = "2022",
+  howpublished = {\url{https://docs.docker.com/engine/reference/commandline/dockerd/}},
+  note = "[Online; accessed 02-February-2022]"
+}
 
  
