--- a/sample.bib
+++ b/sample.bib
@@ -27,6 +27,13 @@
    howpublished = {\url{https://docs.docker.com/get-started/overview/}},
    note = "[Online; accessed 28-January-2022]"
  }
+ @misc{aquasec:docker_architecture,
+  author = "Aqua Security",
+  title = "Docker Architecture",
+  year = "2022,
+  howpublished = {\url{https://www.aquasec.com/cloud-native-academy/docker-container/docker-architecture/}},
+  note = "[Online; accessed 05-February-2022]"
+}
 @inproceedings{Jabbari_devops,
 author = {Jabbari, Ramtin and bin Ali, Nauman and Petersen, Kai and Tanveer, Binish},
 title = {What is DevOps? A Systematic Mapping Study on Definitions and Practices},
