add to bib, small text

--- a/main.tex
+++ b/main.tex
@@ -57,11 +57,11 @@ Docker Images are read-only binary files that are used to build containers\cite{
 
 \subsubsection*{Docker Containers}
 
-Docker Containers are isolated environments which runs applications\cite{aquasec:docker_architecture}. The container contains all the necessary dependencies that are required for running the application.
+Docker Containers are isolated environments which runs applications\cite{aquasec:docker_architecture}. The container contains all the necessary dependencies that are required for running the application. Running containers are isolated from other containers and also have a good isolation from the host machine\cite{docker:security}. Containers can be connected to networks and storages\cite{aquasec:docker_architecture}. The Docker environment has various options for defining the networking. <insert networking> here?
 
 \subsection*{Docker Registry}
 
-
+A Docker registry is a service for storing and downloading images\cite{aquasec:docker_architecture}. A registry can be publicly or privately hosted. Some most known public registries are Docker Hub and Docker Cloud.
 
 \section*{Quality Attributes}
 
