--- a/sample.bib
+++ b/sample.bib
@@ -61,4 +61,11 @@ series = {XP '16 Workshops}
   note = "[Online; accessed 02-February-2022]"
 }
 
+@misc{docker:security,
+  author = "Docker Inc.",
+  title = "Docker Security",
+  year = "2022",
+  howpublished = {\url{https://docs.docker.com/engine/security/}},
+  note = "[Online; accessed 06-February-2022]"
+}
  
