--- a/sample.bib
+++ b/sample.bib
@@ -68,4 +68,21 @@ series = {XP '16 Workshops}
   howpublished = {\url{https://docs.docker.com/engine/security/}},
   note = "[Online; accessed 06-February-2022]"
 }
+
+@misc{docker:network,
+  author = "Docker Inc.",
+  title = "Networking overview",
+  year = "2022",
+  howpublished = {\url{https://docs.docker.com/network/}},
+  note = "[Online; accessed 11-February-2022]"
+}
+
+@misc{docker:iptables,
+  author = "Docker Inc.",
+  title = "Docker and iptables",
+  year = "2022",
+  howpublished = {\url{https://docs.docker.com/network/iptables/}},
+  note = "[Online; accessed 11-February-2022]"
+}
+ 
  
